--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<a href="#">Browser</a>
 		<a href="#" class="nav_right">Help</a>
 		<a href="#" class="nav_right">Log In</a>
-		<a href="#" class="nav_right">Sign Up</a>
+		<a href="signup.html" class="nav_right">Sign Up</a>
 	</nav>
 	
 	<!--Banner/Header section--->
