--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
             <input type="radio" name="gender" value="male">Male
             <input type="radio" name="gender" value="female">Female<br>
             <span class="textform">Email: </span>
-            <input type="text" name="email" value="example@gmail.com">
+            <input type="text" name="email" value="example@gmail.com"><br>
             <span class="textform">Password: </span>
             <input type="password" name="password" value="********">
             <div class="subm"><input type="submit" value="SIGN UP"></div>
