--- a/signup.html
+++ b/signup.html
@@ -3,9 +3,27 @@
 <html>
 <head>
     <title>Sign Up</title>
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <link href="stylesheet/xstyle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    
+	<!--Navigation section--->
+	<nav>
+		<a href="#">Brand</a>
+		<a href="#">Browser</a>
+		<a href="#" class="nav_right">Help</a>
+		<a href="#" class="nav_right">Log In</a>
+		<a href="signup.html" class="nav_right">Sign Up</a>
+	</nav>
+	
+	<!--Banner/Header section--->
+	<header>
+		<img src="images/lodging.png">
+		<h1>Find a place to stay</h1>
+		<p>Rent from people in over 34000 cities and 192 countries</p>
+		<hr size="1px" color="darkgray">
+	</header>
     <form class="signup">
         <fieldset>
             <legend>Sign Up Free</legend>
